 2012-03-29 13:53  hvlad 
   M src/dsql/dsql.cpp
Fixed bug CORE-3801 : Warnings could be put twice in status-vector

 2012-03-29 13:25  hvlad 
   M src/jrd/extds/InternalDS.cpp
Fixed bug CORE-3799 : with caller privileges option don't work with autonomous transaction option

 2012-03-28 18:15  dimitr 
   M doc/WhatsNew
Added the missing bug fixes. I have no clue how they could escape this document :-( My apologies to Vlad.

 2012-03-27 13:17  alexpeshkoff 
   M configure.in
   M src/common/classes/semaphore.cpp
Backported fix for CORE-3770: fbtracemgr loads CPU up to ~55% when no activity is present

 2012-03-27 07:11  dimitr 
   M src/jrd/Database.cpp
   M src/jrd/Database.h
Optimized the shared counter generator to avoid LM calls if there's no contention on the protecting lock.

 2012-03-27 07:10  dimitr 
   M builds/install/misc/firebird.conf.in
   M src/common/classes/TempFile.cpp
   M src/common/config/config.cpp
   M src/jrd/os/win32/winnt.cpp
   M src/utilities/gstat/dba.epp
Fixed CORE-3791: Performance degrades when actively working with databases bigger than the available RAM amount.

 2012-03-24 21:25  robocop 
   M src/jrd/RuntimeStatistics.h
Misc.

 2012-03-22 07:55  dimitr 
   M src/jrd/cvt2.cpp
Slightly changed the logic to make it easier to understand.

 2012-03-21 12:55  hvlad 
   M src/jrd/dpm.epp
Undo patch for CORE-3468

 2012-03-19 09:15  alexpeshkoff 
   M src/jrd/isc.h
Removed debugging code

 2012-03-19 09:10  alexpeshkoff 
   M src/burp/burp.cpp
Postfix for AV due to CORE-3649

 2012-03-19 09:10  alexpeshkoff 
   M src/include/gen/msgs.h
misc

 2012-03-15 12:08  dimitr 
   M src/jrd/cmp.cpp
Fixed CORE-1992: bad BLR -- invalid stream for union select.

 2012-03-15 10:39  dimitr 
   M src/jrd/exe.cpp
   M src/jrd/req.h
Fixed CORE-3092: ROW_COUNT is not cleared before the singleton INSERT statement,

 2012-03-15 09:28  dimitr 
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/RuntimeStatistics.h