@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:26455
+  FORMAL BUILD NUMBER:26456
 */
 
-#define PRODUCT_VER_STRING "2.5.2.26455"
-#define FILE_VER_STRING "WI-V2.5.2.26455"
-#define LICENSE_VER_STRING "WI-V2.5.2.26455"
-#define FILE_VER_NUMBER 2, 5, 2, 26455
+#define PRODUCT_VER_STRING "2.5.2.26456"
+#define FILE_VER_STRING "WI-V2.5.2.26456"
+#define LICENSE_VER_STRING "WI-V2.5.2.26456"
+#define FILE_VER_NUMBER 2, 5, 2, 26456
 #define FB_MAJOR_VER "2"
 #define FB_MINOR_VER "5"
 #define FB_REV_NO "2"
-#define FB_BUILD_NO "26455"
+#define FB_BUILD_NO "26456"
 #define FB_BUILD_TYPE "V"
 #define FB_BUILD_SUFFIX "Firebird 2.5"
